# lib/db/src/schema/index.ts
@@ -1,1 +1,5 @@
 export * from "./coloringPages";
+export * from "./profiles";
+export * from "./stories";
+export * from "./badges";
+export * from "./dailyChallenges";
